Alignment and look & feel fixes

--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,7 +1,7 @@
 div{
-    margin: 30px 1px 1px 15px;
+    margin: 30px 1px 1px 5px;
   }
-  
+
   mat-card{
     width: 100%;
     border-radius: 10px;
