--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -1,5 +1,5 @@
 div{
-    margin: 30px 1px 1px 15px;
+    margin: 30px 1px 1px 5px;
   }
   
   mat-card{
